# resources-api

./: Dockerfile  README.md  VERSION  docker-compose.yaml  pyproject.toml  start.sh
.github/workflows/: test.yml
src/: manage.py
src/common/: test_utils.py
src/resources/: apps.py  models.py  seriazliers.py  tests.py  urls.py  views.py
src/resources/migrations/: 0001_initial.py
src/resources_api/: exceptions.py  settings.py  urls.py  wsgi.py
src/users/: apps.py  models.py  seriazliers.py  tests.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
